[package]
name = "simwatch-grpc"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
prost = "0.11.9"
prost-types = "0.12.0"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["rt-multi-thread", "macros", "sync", "time"]}
tokio-stream = "0.1.14"
tonic = "0.9.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
rstar = { version = "0.9.3", features = ["serde", "debug"] }
geojson = "0.24.0"
chrono = { version = "0.4.31", features = ["serde"] }
log = { version = "0.4.17", features = ["serde"] }
simplelog = "0.12.0"
uuid = { version = "1.2.2", features = ["v4"] }
lazy_static = "1.4.0"
regex = "1.7.0"
csv = "1.1.6"
toml = "0.5.10"
duration-str = "0.5.0"
bson = { version = "2.4.0", features = ["chrono-0_4"] }
zip = "0.6.3"
geo-types = { version = "0.7.11", features = ["use-rstar_0_9"] }
geo = "0.26.0"
clap = { version = "4.4.2", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
